Fix z-index

--- a/nivls_website/nivls_website/static_files/static/commons/css/app/ids.less
+++ b/nivls_website/nivls_website/static_files/static/commons/css/app/ids.less
@@ -6,7 +6,7 @@ header > .navbar {
 #editing-mode-box {
     @size: 40px;
 
-    z-index: 9;
+    z-index: 9999;
     position: fixed;
     text-align: center;
     margin: 0px;
@@ -351,5 +351,5 @@ ul#lab-nav-list {
     background-color: #444;
     padding: 6px 10px 3px 10px;
     .border-bottom-radius(3px);
-    z-index: 10;
+    z-index: 9999;
 }
